--- a/reseni_hard/style.css
+++ b/reseni_hard/style.css
@@ -9,7 +9,9 @@ body {
 /*Mobil first*/
 
 header {
-    background-image: url(images/island-hlavicka.jpg);
+    background-image: 
+        linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+        url(images/island-hlavicka.jpg);
     background-size: cover;
     color: seashell;
 }
@@ -33,13 +35,52 @@ header p {
     width: 50px;
     margin-left: auto;
     margin-right: auto;
-    
 }
 
 .jana {
     color: gainsboro;
     font-weight: 300;
     font-style: italic;
+    margin: 0;
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    text-transform: uppercase;
+    list-style: none;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    padding: 1rem 0 1rem 0;
+}
+
+a {
+    text-decoration: none;
+    color: #9E9E9E;
+}
+
+li {
+    border-bottom: 1px solid gainsboro;
+    padding: 0.25rem 0 0.25rem 0;
+}
+
+p {
+    font-size: 0.6rem;
+    padding: 0 0.5rem 0 0.5rem;
+}
+
+.part1 {
+    padding-bottom: 1.5rem;
+}
+
+.island1 {
+    width: 100%;
+    height: auto;
+}
+
+.island1_credit {
+    text-align: center;
     margin: 0;
 }
 
