--- a/reseni_hard/style.css
+++ b/reseni_hard/style.css
@@ -152,3 +152,13 @@ footer a {
     padding-top: 0.5rem;
 }
 
+.previews > img {
+    transition: all .2s ease-in-out;
+}
+
+.previews > img:hover {
+    transform: scale(1.1);
+    width: 100%;
+    height: auto;
+}
+
