--- a/reseni_hard/style.css
+++ b/reseni_hard/style.css
@@ -277,9 +277,11 @@ main figcaption {
 
 body {
     font-size: 1rem;
+    position: relative;
 }
 
 /*hlavička*/
+
 
 h1 {
     padding-top: 3rem;
@@ -290,7 +292,6 @@ header p {
     font-size: 1rem;
     padding-right: 10rem;
     padding-left: 10rem;
-    position: relative;
 }
 
 .jana {
@@ -304,20 +305,17 @@ header p {
     width: 80%;
     background-color: white;
     position: absolute;
-    top: 480px;
     left: 0;
     right: 0;
     box-shadow: 0px 16px 35px 0px rgba(107,107,107,0.62);
-    margin-left: auto;
-    margin-right: auto;
+    margin: -4rem auto 0 auto;
+
 }
 
 .pc_main {
     display: flex;
     flex: 1;
     justify-content: space-between;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
 }
 
 ul {
@@ -340,30 +338,62 @@ li {
 
 /*texty*/
 
-
-.part2 {
-    float: left;
+.sectiontwo > h2 {
+    font-size: 1.5rem;
     padding-left: 1.5rem;
-    padding-right: 8rem;
 }
 
-h2,
-.object2 {
+.part2 > p {
     padding-left: 1.5rem;
+    font-size: 0.7rem;
+    max-width: 35rem;
+}
+
+.object2 {
+    height: 3px;
+    width: 70px;
+}
+
+.sectionthree > h2 {
+    font-size: 1.5rem;
+    padding-left: 14rem;
+    position: relative;
+}
+
+.part3 > p,
+.part4 > p {
+    padding-left: 14rem;
+    font-size: 0.7rem;
     padding-right: 1.5rem;
 }
 
+.sectionthree .object2 {
+    position: sticky;
+    left: 17rem;
+}
+
+/*galerie*/
+
+.gallery h2 {
+    font-size: 1.5rem;
+    padding-left: 1.5rem;
+}
+
+.photo {
+    width: calc(100%/3);
+}
 
 
-
-
+/*patička*/
 
 footer {
     position: absolute;
-    bottom: -2400px;
-    width: 80%;
-    margin-left: 5rem;
-    font-size: 1.5rem;
+    bottom: -3500px;
+    left: 0;
+}
+
+footer p {
+    font-size: 0.7rem;
 }
 
 
