--- a/reseni_hard/style.css
+++ b/reseni_hard/style.css
@@ -6,6 +6,7 @@ body {
     line-height: 1.5;
     padding: 0;
     margin: 0;
+    font-size: 16px;
 }
 
 
@@ -76,6 +77,11 @@ li {
     margin: 0 1.5rem 0 1.5rem;
 }
 
+li:hover {
+    background: rgb(127,175,223);
+    background: linear-gradient(90deg, rgba(127,175,223,1) 0%, rgba(37,19,61,0) 100%);
+}
+
 
 /*texty*/
 
@@ -84,20 +90,10 @@ p {
     padding: 0 0.7rem 0 0.7rem;
 }
 
-.part1,
-.part2,
-.part3,
-.part4 {
-    padding-bottom: 1.5rem;
-}
-
-.part4 {
-    padding-top: 1.5rem;
-}
-
-img {
+.fotky {
     width: 100%;
     height: auto;
+    padding-top: 1.5rem;
 }
 
 .credit {
@@ -146,6 +142,7 @@ figcaption > a {
 }
 
 .gallery {
+    padding-top: 1.5rem;
     box-shadow: 1px 12px 15px -3px rgba(201,201,201,1);
 }
 
@@ -178,13 +175,15 @@ footer a {
 
 @media only screen and (min-width: 480px) {
 
-
 /*hlavička*/
 
 h1 {
     font-size: 3rem;
     padding-bottom: 0;
     margin-bottom: 0;
+}
+header p {
+    font-size: 0.8rem;
 }
 
 
@@ -211,6 +210,10 @@ li {
 
 
 /*texty*/
+
+p {
+    font-size: 0.7rem;
+}
 
 main figure {
     position: relative;
@@ -251,7 +254,7 @@ main figcaption {
 .photo figcaption {
     position: absolute;
     height: 0;
-    bottom: -10;
+    bottom: -10px;
     color: white;
     background:rgba(50 , 50, 50, 0.7);
     width: 100%;
@@ -263,7 +266,7 @@ main figcaption {
 }
 
 .photo:hover figcaption {
-    height: 30%;
+    height: 20%;
     bottom: 0;
     transition: 0.5s;
 }
@@ -276,12 +279,16 @@ main figcaption {
 @media only screen and (min-width: 860px) {
 
 body {
-    font-size: 1rem;
-    position: relative;
+    font-size: 1.5rem;
+    max-width: 1280px;
 }
+
 
 /*hlavička*/
 
+header {
+    position: relative;
+}
 
 h1 {
     padding-top: 3rem;
@@ -289,7 +296,7 @@ h1 {
 }
 
 header p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     padding-right: 10rem;
     padding-left: 10rem;
 }
@@ -299,17 +306,15 @@ header p {
     padding: 2rem 0 6rem 0;
 }
 
-/*navigace + úvod*/
 
-.pc_version {
-    width: 80%;
+/*navigace + main*/
+
+main {
+    max-width: 80%;
     background-color: white;
-    position: absolute;
-    left: 0;
-    right: 0;
     box-shadow: 0px 16px 35px 0px rgba(107,107,107,0.62);
-    margin: -4rem auto 0 auto;
-
+    margin: -5rem auto 5rem auto;
+    position: relative;
 }
 
 .pc_main {
@@ -323,30 +328,27 @@ ul {
     display: block;
     border: none;
     padding-top: 1.5rem;
+    font-size: 0.8rem;
 }
 
 li {
-    display: block;
     width: 100%;
     text-align: left;
     border-bottom: 1px solid gainsboro;
 }
 
 .part1 {
-    padding: 1.5rem 1rem 1rem 4rem;
+    padding: 1.5rem 1rem 1rem 5rem;
 }
 
 /*texty*/
 
-.sectiontwo > h2 {
-    font-size: 1.5rem;
-    padding-left: 1.5rem;
+p {
+    font-size: 0.9rem;
 }
 
-.part2 > p {
-    padding-left: 1.5rem;
-    font-size: 0.7rem;
-    max-width: 35rem;
+h2 {
+    font-size: 1.5rem;
 }
 
 .object2 {
@@ -354,23 +356,16 @@ li {
     width: 70px;
 }
 
-.sectionthree > h2 {
-    font-size: 1.5rem;
-    padding-left: 14rem;
-    position: relative;
+.sectiontwo {
+    padding-left: 1.5rem;
+    padding-right: 20rem;
 }
 
-.part3 > p,
-.part4 > p {
-    padding-left: 14rem;
-    font-size: 0.7rem;
+.sectionthree {
+    padding-left: 12rem;
     padding-right: 1.5rem;
 }
 
-.sectionthree .object2 {
-    position: sticky;
-    left: 17rem;
-}
 
 /*galerie*/
 
@@ -387,14 +382,11 @@ li {
 /*patička*/
 
 footer {
-    position: absolute;
-    bottom: -3500px;
-    left: 0;
+    padding-left: 7.5rem;
+    font-size: 1rem;
+    margin-top: -4rem;
 }
 
-footer p {
-    font-size: 0.7rem;
-}
 
 
 
